# TopAwaRe

./: .gitignore  CMakeLists.txt  JSONMain.cpp  LICENSE  README.md  doxygen_conf  ext_fpic_fix.sh
docker/: Dockerfile  build.sh
inc/: GradientAlg.hpp  Image.hpp  IntegrationScheme.hpp  Interpolator.hpp  Kernel.hpp  Measure.hpp  Registration.hpp  RegistrationFrame.hpp  TransformationModel.hpp
inc/configuration/: ConfigurationTree.hpp  Node.hpp  NodeMapper.hpp
inc/ext/json/: JSONConfigurationTree.hpp
inc/ext/nifti/: NiftiInt.hpp
inc/ext/opencv/: OpenCVInt.hpp
inc/gpu/: cc.h  fft.h  gpu.h  image.h  mse.h  singularities.h
inc/gradients/: LDDMMGradient.hpp
inc/integration_schemes/: SemiLagrangian.hpp
inc/interpolators/: LinearInterpolator.hpp
inc/kernels/: CauchyNavierKernel.hpp  GaussianKernel.hpp
inc/measures/: CC.hpp  CCalpha.hpp  ControlPointSD.hpp  MSE.hpp  MSEalpha.hpp
inc/transformation_models/: LDDMMTransformationModel.hpp  Singularities.hpp  SingularityTransformationModel.hpp
inc/utils/: Evaluator.hpp  Filters.hpp  Global.hpp  System.hpp  TransConcat.hpp
src/: CMakeLists.txt  Image.cpp  InputParsing.cpp  Interpolator.cpp  Registration.cpp  RegistrationFrame.cpp
src/configuration/: CMakeLists.txt  ConfigurationTree.cpp  Node.cpp
src/ext/json/: CMakeLists.txt  JSONConfigurationTree.cpp
src/ext/nifti/: CMakeLists.txt  NiftiInt.cpp
src/ext/opencv/: CMakeLists.txt  OpenCVInt.cpp
src/gpu/: cc.cu  fft.cu  gpu.cu  image.cu  mse.cu  singularities.cu
src/gradients/: CMakeLists.txt  LDDMMGradient.cpp
src/integration_schemes/: SemiLagrangian.cpp
src/interpolators/: CMakeLists.txt  LinearInterpolator.cpp
src/kernels/: CMakeLists.txt  CauchyNavierKernel.cpp  GaussianKernel.cpp
src/measures/: CC.cpp  CCalpha.cpp  CMakeLists.txt  ControlPointSD.cpp  MSE.cpp  MSEalpha.cpp
src/transformation_models/: CMakeLists.txt  LDDMMTransformationModel.cpp  Singularities.cpp  SingularityTransformationModel.cpp
src/utils/: CMakeLists.txt  Filters.cpp  Global.cpp  TransConcat.cpp
